--- a/views/index.html
+++ b/views/index.html
@@ -78,7 +78,11 @@
             data: $('#testForm2').serialize(),
             success: function(data) {
               $('#jsonResult').text(JSON.stringify(data));
-            }
+            },
+            error: function (result, status, xhr) {
+              console.log(xhr);
+              
+            },
           });
           e.preventDefault();
         });
