project completed, but api call volume is limited

--- a/views/index.html
+++ b/views/index.html
@@ -92,7 +92,7 @@
           },
           error: function (result, status, xhr) {
             $('#jsonResult').text(result.responseText);
-            // console.log(result);
+            console.log(result);
             // console.log(result.responseText);
           },
         });
@@ -108,7 +108,7 @@
           },
           error: function (result, status, xhr) {
             $('#jsonResult').text(result.responseText);
-            // console.log(result);
+            console.log(result);
             // console.log(result.responseText);
           },
         });
